_course_files/5 Fault Injection/8-fault-injection.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-vehicle-telemetry
  namespace: default
spec:
  hosts:
    - fleetman-vehicle-telemetry
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 10 #for 10% of requests generates an HTTP 503
      route:
        - destination:
            host: fleetman-vehicle-telemetry
